:sparkles: feat : feign 방식으로 exercise-record-service와 연결